--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -140,11 +140,11 @@
 
     
 <div class="container pb-6 pt-6 pt-md-14 pb-md-14">
-  <div class="row justify-content-start">
-    <div class="col-12 col-md-8">
-      <h1 class="title">Contactez-nous</h1>
+  <div class="row justify-content-center">
+    <div class="col-12 col-lg-10">
+      <h1 class="title text-center mb-5">Contactez-nous</h1>
 
-      <div class="content"><h1 id="contactez-swisstch-tech">Contactez Swisstch Tech</h1>
+      <div class="content about-content"><h1 id="contactez-swisstch-tech">Contactez Swisstch Tech</h1>
 <p>Notre équipe est à votre disposition pour discuter de vos projets technologiques et trouver les solutions adaptées à vos besoins.</p>
 <h2 id="coordonnées">Coordonnées</h2>
 <p><strong>Swisstch Tech SA</strong><br>
