--- a/public/index.html
+++ b/public/index.html
@@ -147,28 +147,28 @@
         <h1 id="solutions-technologiques-pour-environnements-critiques">Solutions Technologiques pour Environnements Critiques</h1>
 <p><strong>Swisstch Tech</strong> est votre partenaire de confiance pour des solutions IT robustes et sécurisées, spécialement conçues pour les environnements critiques et le secteur hospitalier.</p>
 <h2 id="nos-expertises-clés">Nos Expertises Clés</h2>
-<div class="expertise-grid">
-<div class="expertise-card">
+<div class="expertise-grid" data-aos="fade-up" data-aos-delay="100">
+<div class="expertise-card" data-aos="zoom-in" data-aos-delay="200">
 <h3>🖥️ Développement d'Applications sur Mesure</h3>
 <p>Applications sécurisées et interfaces personnalisées adaptées à vos processus métiers spécifiques</p>
 </div>
-<div class="expertise-card">
+<div class="expertise-card" data-aos="zoom-in" data-aos-delay="300">
 <h3>🌐 Infrastructure Réseau & Serveurs</h3>
 <p>Solutions hybrides cloud/on-premise avec supervision 24/7 et haute disponibilité garantie</p>
 </div>
-<div class="expertise-card">
+<div class="expertise-card" data-aos="zoom-in" data-aos-delay="400">
 <h3>🔒 Cybersécurité Avancée</h3>
 <p>Audits de sécurité, conformité RGPD/ANSSI, implémentation firewalls, IAM, MFA et EDR</p>
 </div>
-<div class="expertise-card">
+<div class="expertise-card" data-aos="zoom-in" data-aos-delay="500">
 <h3>🏥 Logiciels Hospitaliers</h3>
 <p>Applications de gestion patient, portails sécurisés et intégration HL7/API pour le secteur médical</p>
 </div>
-<div class="expertise-card">
+<div class="expertise-card" data-aos="zoom-in" data-aos-delay="600">
 <h3>📞 Support Technique N1/N2</h3>
 <p>Assistance clientèle réactive et gestion complète de vos systèmes informatiques</p>
 </div>
-<div class="expertise-card">
+<div class="expertise-card" data-aos="zoom-in" data-aos-delay="700">
 <h3>💡 Conseil en Transformation Digitale</h3>
 <p>Accompagnement RSSI/DPO et stratégie digitale pour votre croissance technologique</p>
 </div>
